--- a/index.html
+++ b/index.html
@@ -1,1 +1,26 @@
+<!doctype html>
+<html lang="pt-BR">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Marina Oliveira | Editora de Vídeo Profissional</title>
+    <meta name="description" content="Editora de vídeo especializada em YouTube e Redes Sociais. Transformo ideias em histórias visuais que cativam e inspiram." />
+    <meta name="author" content="Marina Oliveira" />
+    <meta name="keywords" content="editora de vídeo, video editor, YouTube, redes sociais, motion graphics, color grading" />
 
+    <meta property="og:title" content="Marina Oliveira | Editora de Vídeo Profissional" />
+    <meta property="og:description" content="Editora de vídeo especializada em YouTube e Redes Sociais. Transformo ideias em histórias visuais que cativam e inspiram." />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Marina Oliveira | Editora de Vídeo" />
+    <meta name="twitter:description" content="Editora de vídeo especializada em YouTube e Redes Sociais." />
+    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+  </head>
+
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
+</html>
