--- a/index.html
+++ b/index.html
@@ -37,6 +37,37 @@
             </div>
         </div>
     </main>
+    
+<section id="portfolio" class="portfolio">
+    <h2>Trabalhos Recentes</h2>
+    <div class="grid-portfolio">
+        <div class="card">
+            <div class="video-placeholder">
+                <img src="https://via.placeholder.com/600x400" alt="Projeto 1">
+                <div class="play-overlay">▶</div>
+            </div>
+            <h3>Campanha Publicitária</h3>
+            <p>Edição e Color Grading</p>
+        </div>
 
+        <div class="card">
+            <div class="video-placeholder">
+                <img src="https://via.placeholder.com/600x400" alt="Projeto 2">
+                <div class="play-overlay">▶</div>
+            </div>
+            <h3>Documentário Institucional</h3>
+            <p>Storytelling e Montagem</p>
+        </div>
+
+        <div class="card">
+            <div class="video-placeholder">
+                <img src="https://via.placeholder.com/600x400" alt="Projeto 3">
+                <div class="play-overlay">▶</div>
+            </div>
+            <h3>Vídeo Clipe Musical</h3>
+            <p>Efeitos Visuais e Ritmo</p>
+        </div>
+    </div>
+</section>
 </body>
 </html>
