--- a/index.html
+++ b/index.html
@@ -69,5 +69,13 @@
         </div>
     </div>
 </section>
+
+    <div id="videoModal" class="modal">
+    <span class="close-modal">&times;</span>
+    <div class="modal-content">
+        <iframe id="videoPlayer" src="" frameborder="0" allowfullscreen></iframe>
+    </div>
+</div>
+
 </body>
 </html>
