--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
         </nav>
     </header>
 
+<nav>
+    <a href="#inicio">Início</a>
+    <a href="#sobre">Sobre</a>
+    <a href="#portfolio">Portfólio</a> <a href="#contato">Contato</a>
+</nav>
+    
     <main class="hero">
         <div class="container">
             <p class="subtitle">EDITORA DE VÍDEO</p>
