--- a/index.html
+++ b/index.html
@@ -10,23 +10,17 @@
 <body>
 
     <header>
-        <div class="logo">Studio<span>Edit</span></div>
-        <nav>
-            <ul>
-                <li><a href="#" class="active">Início</a></li>
-                <li><a href="#">Sobre</a></li>
-                <li><a href="#">Portfólio</a></li>
-                <li><a href="#">Serviços</a></li>
-                <li><a href="#">Contato</a></li>
-            </ul>
-        </nav>
-    </header>
-
-<nav>
-    <a href="#inicio">Início</a>
-    <a href="#sobre">Sobre</a>
-    <a href="#portfolio">Portfólio</a> <a href="#contato">Contato</a>
-</nav>
+    <div class="logo">Studio<span>Edit</span></div>
+    <nav>
+        <ul>
+            <li><a href="#inicio">Início</a></li>
+            <li><a href="#sobre">Sobre</a></li>
+            <li><a href="#portfolio">Portfólio</a></li>
+            <li><a href="#servicos">Serviços</a></li>
+            <li><a href="#contato">Contato</a></li>
+        </ul>
+    </nav>
+</header>
     
     <main class="hero">
         <div class="container">
