--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
     </div>
 </section>
 
+<section id="Sobre">
+</section>
+    
     <div id="videoModal" class="modal">
     <span class="close-modal">&times;</span>
     <div class="modal-content">
