--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
             </div>
         </div>
     </main>
+
+<section id="sobre">
+</section>
     
 <section id="portfolio" class="portfolio">
     <h2>Trabalhos Recentes</h2>
@@ -69,7 +72,10 @@
     </div>
 </section>
 
-<section id="sobre">
+<section id="serviços">
+</section>
+
+<section id="contato">
 </section>
     
     <div id="videoModal" class="modal">
