--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <header>
+    <header id="inicio">
     <div class="logo">Studio<span>Edit</span></div>
     <nav>
         <ul>
@@ -30,9 +30,6 @@
     
         </div>
     </main>
-
-<section id="inicio">
-</section>
     
 <section id="sobre" class="section-container">
 </section>
