--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <header id="inicio">
+    <header>
     <div class="logo">Studio<span>Edit</span></div>
     <nav>
         <ul>
@@ -21,6 +21,9 @@
         </ul>
     </nav>
 </header>
+
+<section id="inicio" class="hero">
+</section>
     
     <main class="hero">
         <div class="container">
