--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <header>
+    <header id="inicio">
     <div class="logo">Studio<span>Edit</span></div>
     <nav>
         <ul>
@@ -21,9 +21,6 @@
         </ul>
     </nav>
 </header>
-
-<section id="inicio" class="hero">
-</section>
     
     <main class="hero">
         <div class="container">
