--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
 </header>
 
     <section id="inicio" class="hero-section">
-    <div class="container-flex">
-        <div class="video-column">
-            <video autoplay muted loop playsinline class="video-loop">
-               <source src="https://assets.mixkit.co/videos/preview/mixkit-software-developer-working-on-his-laptop-308-large.mp4" type="video/mp4">
-            </video>
-        </div>
+    <div class="video-column">
+    <video autoplay muted loop playsinline controls class="video-loop" style="background: #ccc; min-height: 300px;">
+        <source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
+        Seu navegador não suporta o vídeo.
+    </video>
+</div>
 
         <div class="text-column">
             <h1 class="titulo-estilizado">TEXTO</h1>
