--- a/index.html
+++ b/index.html
@@ -85,5 +85,12 @@
     </div>
 </div>
 
+    <footer class="meu-footer">
+    <div class="footer-conteudo">
+        <p>&copy; 2026 StudioEdit. Todos os direitos reservados.</p>
+        <p>Feito com <span>&#10084;</span> by Marina Oliveira</p>
+    </div>
+</footer>
+
 </body>
 </html>
