--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
 
     <footer class="meu-footer">
     <div class="footer-conteudo">
-        <p>&copy; 2026 StudioEdit. Todos os direitos reservados.</p>
-        <p>Feito com <span>&#10084;</span> by Marina Oliveira</p>
+        <p>&copy; 2026 Portfólio. Todos os direitos reservados.</p>
+        <p>Created by Isabelle Yukari</p>
     </div>
 </footer>
 
