--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
 
 <section id="contato" class="section-container">
     
-    <h2>Vamos conversar?</h2>
-    <p>Sinta-se à vontade para entrar em contato através de qualquer uma das redes abaixo:</p>
+    <h2>Gostou do meu trabalho?</h2>
+    <p>Entre em contato comigo!</p>
     
     <div class="botoes-contato">
         <a href="mailto:seuemail@exemplo.com" class="botao">E-mail</a>
