--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Editora de vídeo | Isabelle Yukari</title>
+    <title>Portfólio | Isabelle Yukari</title>
     <link rel="stylesheet" href="style.css">
     <source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
 </head>
