--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
 
 <section id="contato" class="section-container">
     
-    <h2>Gostou do meu trabalho?</h2>
-    <p>Entre em contato comigo!</p>
+    <h1>Gostou do meu trabalho?</h1>
+    <h2>Entre em contato comigo!</h2>
     
     <div class="botoes-contato">
         <a href="mailto:seuemail@exemplo.com" class="botao">E-mail</a>
