--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <h2>Entre em contato comigo!</h2>
     
     <div class="botoes-contato">
-        <a href="mailto:seuemail@exemplo.com" class="botao">E-mail</a>
+        <a href="mailto:isabelleyukari.contato@gmail.com" class="botao">E-mail</a>
         <a href="https://www.linkedin.com/in/isabelle-yukari-1597733a4/" target="_blank" class="botao">LinkedIn</a>
         <a href="https://instagram.com/seuusuario" target="_blank" class="botao">Instagram</a>
     </div>
