--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     
 <section id="sobre" class="section-container">
     <div class="foto">
-        <img src="sua-foto.jpg" alt="Minha Foto">
+        <img src="Minha foto.png" alt="Minha Foto">
     </div>
     
     <div class="conteudo">
