--- a/index.html
+++ b/index.html
@@ -22,13 +22,6 @@
 </header>
 
     <section id="inicio" class="hero-section">
-    <div class="video-column">
-    <video autoplay muted loop playsinline controls class="video-loop" style="background: #ccc; min-height: 300px;">
-        <source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
-        Seu navegador não suporta o vídeo.
-    </video>
-</div>
-
         <div class="text-column">
             <h1 class="titulo-estilizado">TEXTO</h1>
             <p class="subtitulo-estilizado">Bem vindo...</p>
@@ -37,11 +30,11 @@
 </section>
     
 <section id="sobre" class="section-container">
-    <div class="foto">
+    <div class="foto-perfil">
         <img src="Minha foto.png" alt="Minha Foto">
     </div>
     
-    <div class="conteudo">
+    <div class="texto-sobre">
         <h1>SOBRE MIM</h1>
         <p>Aqui você escreve o seu texto, descrevendo quem você é e o que você faz. Esse texto ficará alinhado à direita da imagem.</p>
     </div>
