--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     
 <section id="sobre" class="section-container">
     <div class="foto-perfil">
-        <img src="Minha foto.png" alt="Minha Foto">
+        <img src="Minha foto.png" alt="Minha Foto" width="500">
     </div>
     
     <div class="texto-sobre">
