--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </div>
 </section>
     
-<section id="sobre" class="section-container">
+<section id="sobre" class="sobre-container">
     <div class="foto-perfil">
         <img src="Minha foto.png" alt="Minha Foto" width="500">
     </div>
