--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     
     <div class="texto-sobre">
         <h2>SOBRE MIM</h2>
-        <p>Aqui você escreve o seu texto, descrevendo quem você é e o que você faz. Esse texto ficará alinhado à direita da imagem.</p>
+        <p>Aqui você escreve o seu texto, descrevendo quem você é e o que você faz. Esse texto ficará alinhado à direita da imagem. Aqui você escreve o seu texto, descrevendo quem você é e o que você faz. Esse texto ficará alinhado à direita da imagem. Aqui você escreve o seu texto, descrevendo quem você é e o que você faz. Esse texto ficará alinhado à direita da imagem.</p>
     </div>
 </section>
     
