--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
     </div>
     
     <div class="texto-sobre">
-        <h2>SOBRE MIM</h2>
-        <p>Aqui você escreve o seu texto, descrevendo quem você é e o que você faz. Esse texto ficará alinhado à direita da imagem. Aqui você escreve o seu texto, descrevendo quem você é e o que você faz. Esse texto ficará alinhado à direita da imagem. Aqui você escreve o seu texto, descrevendo quem você é e o que você faz. Esse texto ficará alinhado à direita da imagem.</p>
+        <h1>SOBRE MIM</h1>
+        <p>Aqui você escreve o seu texto, descrevendo quem você é e o que você faz. Esse texto ficará alinhado à direita da imagem.</p>
     </div>
 </section>
     
