--- a/index.html
+++ b/index.html
@@ -37,11 +37,12 @@
     <div class="texto-sobre">
         <h1>SOBRE MIM</h1>
         <p>Aqui você escreve o seu texto, descrevendo quem você é e o que você faz. Esse texto ficará alinhado à direita da imagem.</p>
+        <h2>HABILIDADES</h2>
     </div>
 </section>
     
 <section id="portfolio" class="portfolio">
-    <h2>Trabalhos Recentes</h2>
+    <h2>Trabalhos Autorais</h2>
     <div class="grid-portfolio">
         <div class="card">
             <div class="video-placeholder">
