--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
 </section>
     
 <section id="sobre" class="sobre-container">
-    <div class="foto-perfil">
+    <div class="bloco-foto">
         <img src="Minha foto.png" alt="Minha Foto">
     </div>
     
-    <div class="texto-sobre">
+    <div class="bloco-texto">
         <h1>SOBRE MIM</h1>
         <p>Aqui você escreve o seu texto, descrevendo quem você é e o que você faz. Esse texto ficará alinhado à direita da imagem.</p>
         <h2>HABILIDADES</h2>
