--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </div>
 </section>
     
-<section id="sobre" class="sobre-container">
+<section id="sobre" class="container-sobre">
     <div class="bloco-foto">
         <img src="Minha foto.png" alt="Minha Foto">
     </div>
